--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,13 +2,21 @@ body{
   font-family: verdana;
   background-color: black;
   text-align: center;
+  color: white;
 }
 h1{
   font-weight: normal;
   font-size: 50px;
-  color: white;
 }
 .lnk{
   color: aquamarine;
   font-size: 16px;
+}
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+span{
+  font-size: 21px;
+  color: gray;
 }
