--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,10 @@ h2{
   font-weight: 300;
   font-size: 42px;
 }
-span{
+p{
   font-size: 21px;
   color: gray;
+}
+.footer{
+  text-align: right;
 }
